# todo_list

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
develop/: data.json  main.ipynb  test.html
grade_checker/: __init__.py  calculate.py  components.py  config.py  db.py  logger.py  spider.py  view.py
grade_checker/assets/: license
qml/: Main.qml  Notes.qml  Test.qml  TodoItem.qml  TodoListView.qml  TodoView.qml  Todos.qml
qml/components/: MDatePicker.qml  MEditableParagraph.qml  MEditableText.qml  MIcon.qml  MIconLabel.qml  MImage.qml  MImagePicker.qml  MRipple.qml
tests/: test.yaml  test_delegates.py  test_navigator.py  test_obserables.py  test_observed.py  test_session_manager.py  test_sync_prop.py  test_utils.py  test_yamlfile.py
tests/tests/: observable_list.yaml
todo/: __init__.py  calculate.py  db.py  error.py  globals.py  log.py  utils.py
todo/data/: __init__.py  config.py  data.py  observed.py  observers.py
todo/integrations/: integration.py
todo/integrations/spider/: __init__.py  cookie_pool.py  jsparse.py  navigator.py  retry.py  session_manager.py  spider.py
todo/integrations/studentvue/: data.py  integration.py  spider.py
todo/model/: __init__.py  config.py  data.py  model.py  observables.py  observed.py  observers.py  utils.py  yamlfile.py
todo/view/: components.py  note_controller.py  test.py  todolistview.py  view.py
todo/view/qml/: ClickableMaterialImage.qml  IconButton.qml  IconPane.qml  MaterialImage.qml  RoundPane.qml  Test.qml  TodoItem.qml  TodoList.qml  TodoView.qml
