[tool.poetry]
name = "grade-checker"
version = "0.1.0"
description = ""
authors = ["cao2006721@gmail.com"]
readme = "README.md"
packages = [{include = "grade_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
sv-ttk = "^2.0"
PyYAML = "^6.0"
dateutils = "^0.6.12"
gender-guesser = "^0.4.0"
requests = "^2.28.1"
lxml = "^4.9.1"
pyquery = "^1.4.3"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
